tests/fixtures/errors/map_remove_while_iterate.z
# E0200: structural mutation during iteration invalidates the iterator.
main: function is {
    m: (Map String value: String)
    m.set key: "a".string value: "x".string
    with it: m.iterateItems do for e: it loop {
        m.remove key: "a".string
    }
}
